# rascal_benchmarks

./: .gitignore  CMakeLists.txt  MLIP_Si-prop.ipynb  MLIP_Si.ipynb  MLIP_example.ipynb  README.md  Untitled.ipynb  environment.yml  model_prediction_timings.ipynb  quip_timings.ipynb
cmake/: rascal.cmake
inputs/: soap_input_methane_sulf.json  soap_input_qm7.json
methane_liquid/: fps_features_952.pck  fps_samples_9000.pck  methane_liquid-prop.ipynb
scripts/: CMakeLists.txt  driver.py  kernel_params.py  path.py  representation_params.py  resum.sh
scripts/model/: init.py  project.py  signac.rc  signac_project_document.json  submit_0.sh  submit_1.sh  submit_2.sh  submit_3.sh  submit_4.sh  submit_s.sh
scripts/neighbor_list/: init.py  project.py  signac.rc  submit_0.sh
scripts/python/: prettyjson.py
scripts/quip/: init.py  project.py  signac.rc
scripts/quip_descriptors/: init.py  project.py  signac.rc  xyz_files
scripts/radial_integral/: init.py  project.py  signac.rc  signac_project_document.json  submit_0.sh
scripts/spherical_expansion/: init.py  project.py  signac.rc  signac_project_document.json  submit.sh  submit_0.sh  submit_1.sh  submit_2.sh  submit_3.sh  submit_4.sh
scripts/spherical_harmonics/: init.py  project.py  signac.rc  submit_0.sh
scripts/spherical_invariants/: init.py  project.py  signac.rc  signac_project_document.json  submit2_41.sh  submit_0.sh  submit_1.sh  submit_2.sh  submit_3.sh  submit_4.sh
scripts/structure2representation/: init.py  project.py  signac.rc
scripts/train_model/: init.py  project.py  signac.rc  submit_0.sh
scripts/utils/: colormap.py  io.py  lattice_cubic.py  lattice_tetragonal.py  model.py  quip.py  symmetrize.py  timer.py  utilities.py
src/: CMakeLists.txt  neighbor_list.cc  radial_integral.cc  spherical_expansion.cc  spherical_expansion_half.cc  spherical_harmonics.cc  spherical_invariants.cc  spherical_invariants_half.cc  utils.hh
structures/: README.md  methane_liquide.json  molecular_crystals_100.json  molecular_crystals_50.json
structures/QM9-30k/: dft-smiles_eV_30000.dHf_peratom.npy
structures/raw_data/: README.md  convert_structures.ipynb  qm7-50.json  qm9_eV_5000.dHf_peratom.npy
structures/xyz_convert/: methane_sulfonic_150.xyz
(+20 files in other folders)
